<resources>
    <string name="app_name">CatAndroid</string>
    <string name="empty_string"></string>
    <string name="acknowledgements">A game by Hitpeeps</string>
    <string name="login_button">Login</string>
    <string name="rules_button">Game Rules</string>
    <string name="rules_failed">Sorry :( . We can\'t seem to load the rules file</string>
    <string name="about_button">About this game</string>
    <string name="about_text">COMP 361 Project - Catan + Cities and Knights + Seafarers</string>
    <string name="options">Options</string>
    <string name="start">Start</string>
    <string name="resume_button">Resume</string>
    <string name="option_victory_points_to_win">Points to win</string>
    <string name="option_predefined_board">Predefined Board States</string>
    <string name="option_num_players">Number of Players</string>
    <string name="victory_points_to_win">Victory points to win</string>
    <string name="option_auto_discard">Discard automatically when 7 is rolled</string>
    <string name="short_game">(short game)</string>
    <string name="standard_game">(standard game)</string>
    <string name="long_game">(long game)</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to Catandroid. Please Sign In</string>
    <string name="check_games">View Open Games</string>
    <string name="start_match">Start New Game</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="tradeImprovement">trade</string>
    <string name="politicsImprovement">politics</string>
    <string name="scienceImprovement">science</string>
    <string name="current_improvements">Your Current Improvements</string>
    <string name="shop_improvements">Purchase City Improvements</string>
    <string name="city_improvements">City Improvements</string>
	<string name="desert">desert</string>
	<string name="lumber">lumber</string>
	<string name="wool">wool</string>
	<string name="grain">grain</string>
	<string name="brick">brick</string>
	<string name="ore">ore</string>
	<string name="gold">gold</string>
	<string name="paper">paper</string>
	<string name="coin">coin</string>
	<string name="cloth">cloth</string>
	<string name="fish">Fish</string>
    <string name="knight_basic">basic knight</string>
    <string name="knight_strong">strong knight</string>
    <string name="knight_mighty">mighty knight</string>
    <string name="trade">Trade</string>
    <string name="bankratio"><u>Bank Trade Ratio</u></string>
    <string name="trade_bank">Trade with the bank</string>
    <string name="trade_requesting">Requesting</string>
    <string name="trade_offering">Offering</string>
    <string name="trade_counterproposal">You are requesting:</string>
    <string name="trade_confirm">Confirm</string>
    <string name="trade_cancel">Cancel</string>
    <string name="trade_for_resource">Trade for %s</string>
    <string name="trade_for_prior">Traded for</string>
    <string name="trade_invalid">Invalid trade</string>
    <string name="trade_plus">+</string>
    <string name="trade_minus">-</string>
    <string name="trade_zero">0</string>
    <string name="resources">Road: lumber, brick
		\nSettlement: lumber, wool, grain,
		brick
		\nCity: 2 grain, 3 ore
    </string>
    <string name="trade_your_resources">Your resources</string>
    <string name="trade_propose">Propose trade</string>
    <string name="trade_make_offer">Make offer</string>
    <string name="trade_accept_offer">Accept offer</string>
    <string name="trade_decline_offer">Decline offer</string>
    <string name="trade_accepted">Trade with %s</string>
    <string name="trade_counter">%s proposed a counter-offer</string>
    <string name="trade_counter_offer">Counter-offer</string>
    <string name="trade_counter_make">Make counter-offer</string>
    <string name="trade_rejected">%s has rejected the offer</string>
    <string name="trade_pending_offers">Pending offers</string>
    <string name="trade_player_wants">Trade request for %s</string>
    <string name="trade_ratio" formatted="false">%s (%d:1)</string>
    <string name="trade_player_offer">%s is offering</string>
    <string name="discard_reason">%s rolled a 7</string>
    <string name="discard_instruction">discard %d resources</string>
    <string name="discard_select">Select resources to discard</string>
    <string name="discard_button">Discard Resources</string>
    <string name="player_roll">Rolled %s</string>
    <string name="player_road">Built a road</string>
    <string name="player_ship">Built a ship</string>
    <string name="player_settlement">Built a settlement</string>
    <string name="player_city">Built a city</string>
    <string name="player_city_wall">Built a city wall</string>
    <string name="player_place_knight">Dispatched a knight</string>
	<string name="player_activate_knight">Activated a knight</string>
	<string name="player_promote_knight">Promoted a knight</string>
	<string name="player_chase_robber">Chased the robber</string>
	<string name="player_chase_pirate">Chased the pirate</string>
	<string name="player_traded_away">Traded away %s</string>
	<string name="player_ended_turn">Ended turn</string>
	<string name="player_received_card">Received a free progress card</string>
	<string name="player_played_card">Played a %s card</string>
	<string name="player_move_knight">Moved a knight</string>
	<string name="player_displace_knight">Displaced an opponent knight</string>
    <string name="player_longest_road">Has the longest road</string>
    <string name="player_stole_from">Stole from %s</string>
    <string name="player_received_resource">Received %s</string>
    <string name="player_received_x_resources" formatted="false">Received %s resources</string>
    <string name="player_discarded">Discarded %s</string>
    <string name="player_traded_with">Traded with %s</string>
    <string name="player_traded_for">Traded for %s</string>
	<string name="player_tradeImp">Purchased Trade Improvement Level: %s</string>
	<string name="player_scienceImp">Purchased Science Improvement Level: %s</string>
	<string name="player_politicsImp">Purchased Politics Improvement Level: %s</string>
	<string name="player_stole_trade">Stole Trade Metropolis From: %s</string>
	<string name="player_stole_science">Stole Science Metropolis From: %s</string>
	<string name="player_stole_politics">Stole Politics Metropolis From: %s</string>
    <string name="status">Status</string>
    <string name="status_points_str">points</string>
    <string name="status_victory_points">Victory points</string>
    <string name="status_color">Color</string>
    <string name="status_this_turn">This turn</string>
    <string name="status_last_turn">Last turn</string>
    <string name="status_turn">Turn</string>
    <string name="status_resources">Resources</string>
    <string name="status_settlements">Settlements (1 point)</string>
    <string name="status_cities">Cities (2 points)</string>
    <string name="status_roads">Total roads</string>
    <string name="status_ships">Total ships</string>
    <string name="status_best_road_length">Your longest road length</string>
    <string name="status_has_longest_road">Longest road</string>
    <string name="status_progress_cards">Progress cards</string>
    <string name="status_harbor">harbor</string>
    <string name="reference">Costs Reference</string>
    <string name="development_costs">Development Costs</string>
    <string name="reference_road">Road</string>
    <string name="reference_settlement">Settlement</string>
    <string name="reference_city">City</string>
    <string name="reference_city_wall">City Wall</string>
    <string name="reference_ship">Ship</string>
    <string name="reference_tradeImprovement">Trade</string>
    <string name="reference_scienceImprovement">Science</string>
    <string name="reference_politicsImprovement">Politics</string>
    <string name="reference_costs">Road:\n1 lumber, 1 brick\n
		\nSettlement:\n1 lumber, 1
		wool, 1 grain, 1 brick\n
		\nCity:\n2 grain, 3 ore\n
    </string>
	<string name="player_barbarians_attack">Barbarians Attacked!</string>
	<string name="player_barbarians_won">Barbarians were Victorious!</string>
	<string name="player_barbarians_lose">Catan Defended Successfully!</string>
	<string name="player_barbarians_defender">%s was Defender of Catan!</string>
	<string name="player_barbarians_tie">Players %s tied for defender of Catan!</string>
	<string name="player_removed_robber">Removed the Robber from the board!</string>
	<string name="player_removedPirate">Removed the Pirate from the board!</string>
	<string name="player_status">Player Status</string>
	<string name="player_status_points_str">points</string>
	<string name="player_status_victory_points">Victory points</string>
	<string name="player_status_color">Color</string>
	<string name="player_status_this_turn">This turn</string>
	<string name="player_status_last_turn">Last turn</string>
	<string name="player_status_resources">Resources</string>
	<string name="player_status_total_settlements">Total Settlements (1 point each)</string>
	<string name="player_status_total_cities">Total Cities (2 points each)</string>
	<string name="player_status_total_roads">Total roads</string>
	<string name="player_status_total_ships">Total ships</string>
	<string name="player_status_total_city_walls">Total city walls</string>
	<string name="player_status_total_basic_knights">Total basic knights</string>
	<string name="player_status_total_strong_knights">Total strong knights</string>
	<string name="player_status_total_mighty_knights">Total mighty knights</string>
	<string name="player_status_best_road_length">Your longest road length</string>
	<string name="player_status_has_longest_road">Longest road</string>
	<string name="player_status_progress_cards">Progress cards</string>
	<string name="player_status_harbor">harbor</string>
	<string name="costs_reference">Costs Reference</string>
	<string name="costs_reference_title">Development Costs</string>
	<string name="costs_reference_build_road">Build Road</string>
	<string name="costs_reference_build_ship">Build Ship</string>
	<string name="costs_reference_build_settlement">Build Settlement</string>
	<string name="costs_reference_build_city">Build City</string>
	<string name="costs_reference_build_city_wall">Build City Wall</string>
	<string name="costs_reference_hire_knight">Hire Knight</string>
	<string name="costs_reference_activate_knight">Activate Knight</string>
	<string name="costs_reference_promote_knight">Promote Knight</string>
	<string name="costs_reference_tradeImprovement">Trade</string>
	<string name="costs_reference_scienceImprovement">Science</string>
	<string name="costs_reference_politicsImprovement">Politics</string>
	<string name="reference_fishImprovement">Use Earned Fish</string>
    <string name="button_cards">Buy or use cards</string>
    <string name="button_settlement">Build settlement</string>
    <string name="button_city">Build city</string>
    <string name="button_road">Build road</string>
    <string name="button_status">Status</string>
    <string name="button_roll">Roll dice</string>
    <string name="button_end">End turn</string>
    <string name="button_trade">Trade</string>
    <string name="button_cancel">Cancel</string>
    <string name="phase_first_settlement">Place a settlement</string>
</resources>