<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/trade_player_wants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trade_player_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/lumber"
                android:src="@drawable/resource_lumber_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/wool"
                android:src="@drawable/resource_wool_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/grain"
                android:src="@drawable/resource_grain_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/brick"
                android:src="@drawable/resource_brick_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/ore"
                android:src="@drawable/resource_ore_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/gold"
                android:src="@drawable/resource_gold_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/paper"
                android:src="@drawable/resource_paper_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/coin"
                android:src="@drawable/resource_coin_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/cloth"
                android:src="@drawable/resource_cloth_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_offer9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/trade_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trade_accept_offer" >
        </Button>
        <Button
            android:id="@+id/trade_decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trade_decline_offer" >
        </Button>
        <Button
            android:id="@+id/trade_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trade_counter_offer" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_your_resources" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/lumber"
                android:src="@drawable/resource_lumber_medium"
                android:textIsSelectable="false" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/wool"
                android:src="@drawable/resource_wool_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/grain"
                android:src="@drawable/resource_grain_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/brick"
                android:src="@drawable/resource_brick_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/ore"
                android:src="@drawable/resource_ore_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/gold"
                android:src="@drawable/resource_gold_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/paper"
                android:src="@drawable/resource_paper_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/coin"
                android:src="@drawable/resource_coin_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/cloth"
                android:src="@drawable/resource_cloth_medium" >
            </ImageView>

            <TextView
                android:id="@+id/trade_res9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="14dip"
                android:text="@string/trade_zero"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>